# funding-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 002_create_contract_enriched.py
deploy/: .env.example  README.md  docker-compose.yaml
funding_tracker/: __init__.py  bootstrap.py  cli.py  logging_setup.py  main.py  materialized_view_refresher.py  runtime.py  settings.py
funding_tracker/coordinators/: __init__.py  contract_registry.py  history_fetcher.py  live_collector.py  symbol_assembler.py
funding_tracker/db/: unit_of_work.py
funding_tracker/db/repositories/: asset.py  contract.py  historical_funding_point.py  live_funding_point.py  quote.py  section.py  utils.py
funding_tracker/exchanges/: __init__.py  _template.py  aster.py  backpack.py  base.py  binance_coinm.py  binance_usdm.py  bybit.py  derive.py  dto.py  dydx.py  extended.py  hyperliquid.py  hyperliquid_xyz.py  kucoin.py  lighter.py  okx.py  pacifica.py  paradex.py  protocol.py  utils.py
funding_tracker/infrastructure/: __init__.py  http_client.py
funding_tracker/orchestration/: __init__.py  exchange_orchestrator.py
funding_tracker/shared/: __init__.py
funding_tracker/shared/models/: __init__.py  asset.py  base.py  contract.py  historical_funding_point.py  live_funding_point.py  quote.py  section.py
funding_tracker/shared/repositories/: __init__.py  asset.py  base.py  contract.py  historical_funding_point.py  live_funding_point.py  quote.py  section.py  utils.py
funding_tracker/tools/: README.md  __init__.py  verify_exchange.py
scripts/: verify_exchange.py
tests/: __init__.py
