[project]
name = "funding-tracker"
version = "0.1.0"
description = "Crypto funding rate collection and analysis (historical and real-time)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
    "apscheduler>=3.11.1",
    # Database
    "sqlmodel>=0.0.27",
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.1",
    "psycopg[binary]>=3.2.12",
    "greenlet>=3.2.4",
    "alembic-postgresql-enum>=1.8.0",
    # TimescaleDB support
    "sqlalchemy-timescaledb",
    # Utilities
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "quantshark-shared",
]

[project.scripts]
funding-tracker = "funding_tracker.main:main"
verify = "funding_tracker.tools.verify_exchange:entrypoint"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
    "pyright>=1.1.407",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
quantshark-shared = { git = "https://github.com/Quantshark-tools/shared.git" }
sqlalchemy-timescaledb = { git = "https://github.com/NikitaPirate/sqlalchemy-timescaledb.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "ANN", "Q", "T20", "N", "TID"]
ignore = ["ANN002", "ANN003"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/**/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["funding_tracker"]
exclude = [
    "**/__pycache__",
    ".venv",
    "funding_tracker/exchanges/_template.py",
]
ignore = [
    ".venv/**",
    "**/.venv/**",
]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
